Use qt::window instead of qt::tool for keyboard events in the popups.

The original code used the window hint instead of the tool hint, and
that seems to be required to receive keyboard events.

BUG:419306